# kurento-frame-saver-module

FrameSaverFilterApp/src/: FrameSaverFilterApp.c
FrameSaverFilterLib/Debug/: makefile
FrameSaverFilterLib/Release/: makefile
FrameSaverFilterLib/inc/: frame_saver_filter.h  frame_saver_filter_lib.h  frame_saver_params.h  save_frames_as_png.h  wrapped_native_platforms.h  wrapped_natives.h
FrameSaverFilterLib/png-api/: pngconf.h  pnglibconf.h
FrameSaverFilterLib/src/: frame_saver_filter.c  frame_saver_filter_lib.c  frame_saver_params.c  frame_saver_plugin.c  gst_frame_saver_plugin.c  save_frames_as_png.c  tee_to_two_example.c  win32api-dll-main.c  wrapped_native_platforms.c  wrapped_natives.c
FrameSaverFilterLibStatic/inc/: frame_saver_filter_lib.h
FrameSaverFilterTesterApp/Debug/: makefile  objects.mk
FrameSaverFilterTesterApp/Release/: makefile  objects.mk
FrameSaverFilterTesterApp/src/: FrameSaverFilterTesterApp.c
FrameSaverPlugin/src/: gst_Frame_Saver_Plugin.h
FrameSaverPluginLib/: ECLIPSE.cproject
FrameSaverPluginLib/Debug/: makefile  objects.mk
FrameSaverPluginLib/Release/: makefile  objects.mk  sources.mk
FrameSaverPluginLib/inc/: frame_saver_filter.h  frame_saver_filter_lib.h
FrameSaverPluginLib/plugin/: gst_frame_saver_plugin.c  gst_frame_saver_plugin.ms
FrameSaverPluginLib/png-api/: pngconf.h  pnglibconf.h
FrameSaverPluginLib/src/: frame_saver_filter.c  frame_saver_filter_lib.c  gst_frame_saver_plugin.c  gst_frame_saver_plugin.h  save_frames_as_png.c  win32api-dll-main.c
FrameSaverPluginLib/unused/: gst_audio_frame_saver_splice.__c  gst_audio_frame_saver_splice.c.txt  gst_transform_frame_saver_splic.c.txt  gst_transform_frame_saver_splice.__c
FrameSaverVideoFilterPlugin/src/: gst_Frame_Saver_Video_Filter_Plugin.h
GstFrameSaverPlugin/src/: gst_Frame_Saver_Plugin.c  gst_Frame_Saver_Plugin.h
GstFrameSaverPluginLib/src/: gst_Frame_Saver_Plugin.c  gst_Frame_Saver_Plugin.h
GstFrameSaverPluginLibShared/src/: gst_Frame_Saver_Plugin.c
KmsFrameSaverMediaPipelineLib/src/: FrameSaverMediaPipelineImpl.cpp  FrameSaverMediaPipelineImpl.hpp  FrameSaverMediaPipelineImplFactory.hpp  FrameSaverMediaPipeline_Impl.cpp  FrameSaverMediaPipeline_Impl.hpp
KmsModule-FrameSaverMediaPipelineImpl-LibStatic/src/: FrameSaverMediaPipelineImpl.cpp  FrameSaverMediaPipelineImpl.hpp  FrameSaverMediaPipelineImplFactory.hpp
KmsModule-FrameSaverVideoFilterImpl-LibStatic/src/: FrameSaverVideoFilterImpl.cpp  FrameSaverVideoFilterImpl.hpp
KmsModuleFrameSaverMediaPipeline/frame-saver-media-pipeline/: .gitignore  CMakeLists.txt
KmsModuleFrameSaverMediaPipeline/frame-saver-media-pipeline/src/gst-plugins/: CMakeLists.txt  gst_Frame_Saver_Plugin.c
KmsModuleFrameSaverVideoFilterimpl/src/: FrameSaverVideoFilter.hpp  FrameSaverVideoFilterImpl.cpp  FrameSaverVideoFilterImpl.hpp  FrameSaverVideoFilterImplFactory.hpp
KmsModule_FrameSaverMediaPipeline/: cmake-and-make-module.SUCCESS.txt  etc^default^kurento-media-server.cfg
KmsModule_FrameSaverMediaPipeline/frame-saver-media-pipeline/: CMakeLists.txt
KmsModule_FrameSaverMediaPipeline/frame-saver-media-pipeline/src/gst-plugins/: CMakeLists.txt  gst_Frame_Saver_Plugin.h
KmsModule_FrameSaverMediaPipeline/frame-saver-media-pipeline/src/gst-plugins/frame_saver/: wrapped_natives.c  wrapped_natives.h
KmsModule_FrameSaverVideoFilterImpl_LibStatic/src/: FrameSaverVideoFilterImpl.hpp  FrameSaverVideoFilterImplFactory.hpp
KmsModule_FrameSaverVideoFilteriImpl/src/: FrameSaverVideoFilterImpl.cpp  FrameSaverVideoFilterImpl.hpp
ModuleAutoGen-frame-saver-media-pipeline/: cmake-and-make.FrameSaverMediaPipeline.txt  config.h.cmake  etc^default^kurento-media-server.cfg
ModuleAutoGen-frame-saver-media-pipeline/src/gst-plugins/: CMakeLists.txt  gst_Frame_Saver_Plugin.c  gst_Frame_Saver_Plugin.h
ModuleAutoGen-frame-saver-video-filter/: CMakeLists.txt  ModuleAutoGen-frame-saver-video-filter.README.txt  build-module-FrameSaverVideoFilter.SUCCESS.txt  cmake-and-make.FrameSaverVideoFilter.txt  config.h.cmake  etc^default^kurento-media-server.cfg
ModuleAutoGen-frame-saver-video-filter/frame-saver-video-filter/: CMakeLists.txt  cmake-and-make.FrameSaverVideoFilter.txt
ModuleAutoGen-frame-saver-video-filter/kurento-frame-saver-video-filter/: .gitignore  CMakeLists.txt  cmake-and-make.FrameSaverVideoFilter.20161203A.txt  config.h.cmake
ModuleAutoGen-frame-saver-video-filter/kurento-frame-saver-video-filter/src/gst-plugins/framesavervideofilter/: CMakeLists.txt  gst_Frame_Saver_Video_Filter_Plugin.h
Validation/JAVA-APPS-AND-BROWSER/: kurento-player-frame-saver-app.EXCEPTION.txt
(+230 files in other folders)
